authorization/samples/sleep.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: sleep
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sleep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sleep
    spec:
      serviceAccountName: sleep-account
      containers:
        - name: sleep
          image: pstauffer/curl
          command: ["/bin/sleep", "3650d"]
          imagePullPolicy: IfNotPresent
---
